--- a/src/components/Navbar/Navbar.module.css
+++ b/src/components/Navbar/Navbar.module.css
@@ -16,9 +16,8 @@
 }
 
 .inner {
-  max-width: var(--wide-width);
-  margin: 0 auto;
-  padding: 0 1.5rem;
+  width: 100%;
+  padding: 0 2.5rem;
   height: 100%;
   display: flex;
   align-items: center;
@@ -86,6 +85,10 @@
 
 /* Mobile */
 @media (max-width: 768px) {
+  .inner {
+    padding: 0 1.5rem;
+  }
+
   .hamburger {
     display: flex;
   }
